[gd_scene load_steps=14 format=4 uid="uid://qh06yxuj4gpf"]

[ext_resource type="Script" path="res://scripts/anagram_control.gd" id="1_hge78"]
[ext_resource type="Texture2D" uid="uid://b67u1xr46hcc1" path="res://assets/sprites/computer/computer.png" id="2_8tmit"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_vkqx5"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_wcx1g"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_yru1c"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_yjdvr"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_yifyt"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_53drf"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_1ucle"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_glke3"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_c568s"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w1x01"]
texture = ExtResource("2_8tmit")
0:0/0 = 0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_vkqx5")
1:0/0 = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_wcx1g")
2:0/0 = 0
2:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_yru1c")
3:0/0 = 0
3:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_yjdvr")
4:0/0 = 0
4:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_yifyt")
5:0/0 = 0
5:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_53drf")
6:0/0 = 0
6:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_1ucle")
7:0/0 = 0
7:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_glke3")
7:0/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_c568s")
8:0/0 = 0
3:1/0 = 0
4:1/0 = 0
2:1/0 = 0
1:1/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_vsvd4"]
navigation_layer_0/layers = 0
navigation_layer_1/layers = 0
sources/1 = SubResource("TileSetAtlasSource_w1x01")

[node name="AnagramControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hge78")

[node name="Icons" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_vsvd4")

[node name="Background" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAAAAQACAAEAAAAAAAEAAQACAAEAAAAAAAIAAQACAAEAAAAAAAMAAQACAAEAAAAAAAQAAQACAAEAAAAAAAUAAQACAAEAAAAAAAYAAQACAAEAAAAAAAcAAQACAAEAAAAAAAgAAQACAAEAAAAAAAkAAQACAAEAAAAAAAoAAQACAAEAAAAAAAsAAQACAAEAAAABAAAAAQACAAEAAAABAAEAAQACAAEAAAABAAIAAQACAAEAAAABAAMAAQACAAEAAAABAAQAAQACAAEAAAABAAUAAQACAAEAAAABAAYAAQACAAEAAAABAAcAAQACAAEAAAABAAgAAQACAAEAAAABAAkAAQACAAEAAAABAAoAAQACAAEAAAABAAsAAQACAAEAAAACAAAAAQACAAEAAAACAAEAAQACAAEAAAACAAIAAQACAAEAAAACAAMAAQACAAEAAAACAAQAAQACAAEAAAACAAUAAQACAAEAAAACAAYAAQACAAEAAAACAAcAAQACAAEAAAACAAgAAQACAAEAAAACAAkAAQACAAEAAAACAAoAAQACAAEAAAACAAsAAQACAAEAAAADAAAAAQACAAEAAAADAAEAAQACAAEAAAADAAIAAQACAAEAAAADAAMAAQACAAEAAAADAAQAAQACAAEAAAADAAUAAQACAAEAAAADAAYAAQACAAEAAAADAAcAAQACAAEAAAADAAgAAQACAAEAAAADAAkAAQACAAEAAAADAAoAAQACAAEAAAADAAsAAQACAAEAAAAEAAAAAQACAAEAAAAEAAEAAQACAAEAAAAEAAIAAQACAAEAAAAEAAMAAQACAAEAAAAEAAQAAQACAAEAAAAEAAUAAQACAAEAAAAEAAYAAQACAAEAAAAEAAcAAQACAAEAAAAEAAgAAQACAAEAAAAEAAkAAQACAAEAAAAEAAoAAQACAAEAAAAEAAsAAQACAAEAAAAFAAAAAQACAAEAAAAFAAEAAQACAAEAAAAFAAIAAQACAAEAAAAFAAMAAQACAAEAAAAFAAQAAQACAAEAAAAFAAUAAQACAAEAAAAFAAYAAQACAAEAAAAFAAcAAQACAAEAAAAFAAgAAQACAAEAAAAFAAkAAQACAAEAAAAFAAoAAQACAAEAAAAFAAsAAQACAAEAAAAGAAAAAQACAAEAAAAGAAEAAQACAAEAAAAGAAIAAQACAAEAAAAGAAMAAQACAAEAAAAGAAQAAQACAAEAAAAGAAUAAQACAAEAAAAGAAYAAQACAAEAAAAGAAcAAQACAAEAAAAGAAgAAQACAAEAAAAGAAkAAQACAAEAAAAGAAoAAQACAAEAAAAGAAsAAQACAAEAAAAHAAAAAQACAAEAAAAHAAEAAQACAAEAAAAHAAIAAQACAAEAAAAHAAMAAQACAAEAAAAHAAQAAQACAAEAAAAHAAUAAQACAAEAAAAHAAYAAQACAAEAAAAHAAcAAQACAAEAAAAHAAgAAQACAAEAAAAHAAkAAQACAAEAAAAHAAoAAQACAAEAAAAHAAsAAQACAAEAAAAIAAAAAQACAAEAAAAIAAEAAQACAAEAAAAIAAIAAQACAAEAAAAIAAMAAQACAAEAAAAIAAQAAQACAAEAAAAIAAUAAQACAAEAAAAIAAYAAQACAAEAAAAIAAcAAQACAAEAAAAIAAgAAQACAAEAAAAIAAkAAQACAAEAAAAIAAoAAQACAAEAAAAIAAsAAQACAAEAAAAJAAAAAQACAAEAAAAJAAEAAQACAAEAAAAJAAIAAQACAAEAAAAJAAMAAQACAAEAAAAJAAQAAQACAAEAAAAJAAUAAQACAAEAAAAJAAYAAQACAAEAAAAJAAcAAQACAAEAAAAJAAgAAQACAAEAAAAJAAkAAQACAAEAAAAJAAoAAQACAAEAAAAJAAsAAQACAAEAAAAKAAAAAQACAAEAAAAKAAEAAQACAAEAAAAKAAIAAQACAAEAAAAKAAMAAQACAAEAAAAKAAQAAQACAAEAAAAKAAUAAQACAAEAAAAKAAYAAQACAAEAAAAKAAcAAQACAAEAAAAKAAgAAQACAAEAAAAKAAkAAQACAAEAAAAKAAoAAQACAAEAAAAKAAsAAQACAAEAAAALAAAAAQACAAEAAAALAAEAAQACAAEAAAALAAIAAQACAAEAAAALAAMAAQACAAEAAAALAAQAAQACAAEAAAALAAUAAQACAAEAAAALAAYAAQACAAEAAAALAAcAAQACAAEAAAALAAgAAQACAAEAAAALAAkAAQACAAEAAAALAAoAAQACAAEAAAALAAsAAQACAAEAAAAMAAAAAQACAAEAAAAMAAEAAQACAAEAAAAMAAIAAQACAAEAAAAMAAMAAQACAAEAAAAMAAQAAQACAAEAAAAMAAUAAQACAAEAAAAMAAYAAQACAAEAAAAMAAcAAQACAAEAAAAMAAgAAQACAAEAAAAMAAkAAQACAAEAAAAMAAoAAQACAAEAAAAMAAsAAQACAAEAAAANAAAAAQACAAEAAAANAAEAAQACAAEAAAANAAIAAQACAAEAAAANAAMAAQACAAEAAAANAAQAAQACAAEAAAANAAUAAQACAAEAAAANAAYAAQACAAEAAAANAAcAAQACAAEAAAANAAgAAQACAAEAAAANAAkAAQACAAEAAAANAAoAAQACAAEAAAANAAsAAQACAAEAAAAOAAAAAQACAAEAAAAOAAEAAQACAAEAAAAOAAIAAQACAAEAAAAOAAMAAQACAAEAAAAOAAQAAQACAAEAAAAOAAUAAQACAAEAAAAOAAYAAQACAAEAAAAOAAcAAQACAAEAAAAOAAgAAQACAAEAAAAOAAkAAQACAAEAAAAOAAoAAQACAAEAAAAOAAsAAQACAAEAAAAPAAAAAQACAAEAAAAPAAEAAQACAAEAAAAPAAIAAQACAAEAAAAPAAMAAQACAAEAAAAPAAQAAQACAAEAAAAPAAUAAQACAAEAAAAPAAYAAQACAAEAAAAPAAcAAQACAAEAAAAPAAgAAQACAAEAAAAPAAkAAQACAAEAAAAPAAoAAQACAAEAAAAPAAsAAQACAAEAAAAQAAAAAQACAAEAAAAQAAEAAQACAAEAAAAQAAIAAQACAAEAAAAQAAMAAQACAAEAAAAQAAQAAQACAAEAAAAQAAUAAQACAAEAAAAQAAYAAQACAAEAAAAQAAcAAQACAAEAAAAQAAgAAQACAAEAAAAQAAkAAQACAAEAAAAQAAoAAQACAAEAAAAQAAsAAQACAAEAAAARAAAAAQACAAEAAAARAAEAAQACAAEAAAARAAIAAQACAAEAAAARAAMAAQACAAEAAAARAAQAAQACAAEAAAARAAUAAQACAAEAAAARAAYAAQACAAEAAAARAAcAAQACAAEAAAARAAgAAQACAAEAAAARAAkAAQACAAEAAAARAAoAAQACAAEAAAARAAsAAQACAAEAAAASAAAAAQACAAEAAAASAAEAAQACAAEAAAASAAIAAQACAAEAAAASAAMAAQACAAEAAAASAAQAAQACAAEAAAASAAUAAQACAAEAAAASAAYAAQACAAEAAAASAAcAAQACAAEAAAASAAgAAQACAAEAAAASAAkAAQACAAEAAAASAAoAAQACAAEAAAASAAsAAQACAAEAAAATAAAAAQACAAEAAAATAAEAAQACAAEAAAATAAIAAQACAAEAAAATAAMAAQACAAEAAAATAAQAAQACAAEAAAATAAUAAQACAAEAAAATAAYAAQACAAEAAAATAAcAAQACAAEAAAATAAgAAQACAAEAAAATAAkAAQACAAEAAAATAAoAAQACAAEAAAATAAsAAQACAAEAAAAUAAAAAQACAAEAAAAUAAEAAQACAAEAAAAUAAIAAQACAAEAAAAUAAMAAQACAAEAAAAUAAQAAQACAAEAAAAUAAUAAQACAAEAAAAUAAYAAQACAAEAAAAUAAcAAQACAAEAAAAUAAgAAQACAAEAAAAUAAkAAQACAAEAAAAUAAoAAQACAAEAAAAUAAsAAQACAAEAAAA=")
tile_set = SubResource("TileSet_vsvd4")

[node name="LbWord" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 107.0
offset_top = 40.0
offset_right = 350.0
offset_bottom = 63.0
text = "Word"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 73.0
offset_right = 357.0
offset_bottom = 104.0
placeholder_text = "Digite aqui"

[node name="BtCheck" type="Button" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 183.0
offset_right = 320.0
offset_bottom = 220.0
text = "OK!"

[node name="LbResult" type="Label" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 126.0
offset_right = 189.0
offset_bottom = 149.0
text = "Resultado"

[node name="BtRestart" type="Button" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 182.0
offset_right = 211.0
offset_bottom = 225.0
text = "Tente novamente"

[connection signal="pressed" from="BtCheck" to="." method="_on_btCheck_pressed"]
[connection signal="pressed" from="BtRestart" to="." method="_on_btRestart_pressed"]
